[gd_scene load_steps=9 format=3 uid="uid://cuv4vme4rwno0"]

[ext_resource type="Script" uid="uid://dt6cku0034183" path="res://scripts/world/game_manager.gd" id="1_l4ihi"]
[ext_resource type="FontFile" uid="uid://c53kogtyjwsss" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_nlliu"]
[ext_resource type="Script" uid="uid://bn7k30un4krgc" path="res://scripts/networks/network_manager.gd" id="3_sp8dn"]
[ext_resource type="PackedScene" uid="uid://bjepgwbger5by" path="res://scenes/ui/inventory_ui.tscn" id="6_u5sy4"]
[ext_resource type="PackedScene" uid="uid://bkoumtvprpdxl" path="res://data/material_source/rock.tscn" id="7_2oj1e"]
[ext_resource type="PackedScene" uid="uid://de0ssdimokpc0" path="res://data/material_source/tree.tscn" id="7_3gx7t"]
[ext_resource type="FontFile" uid="uid://dbjl1e6kdxpl6" path="res://assets/fonts/PixelOperator8.ttf" id="7_8cblx"]
[ext_resource type="PackedScene" uid="uid://d2wsccn28dqmh" path="res://scenes/ui/menu_bar_ui.tscn" id="8_2oj1e"]

[node name="Game" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_l4ihi")

[node name="NetworkManager" type="Node" parent="." node_paths=PackedStringArray("_players_spawn_node")]
unique_name_in_owner = true
script = ExtResource("3_sp8dn")
_players_spawn_node = NodePath("../Players")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://d226nufmlvivj")
spawn_path = NodePath("../Players")
spawn_limit = 10

[node name="Players" type="Node2D" parent="."]

[node name="Objects" type="Node2D" parent="."]
position = Vector2(-128, -128)

[node name="Tree" parent="Objects" instance=ExtResource("7_3gx7t")]
position = Vector2(256, 256)

[node name="Tree2" parent="Objects" instance=ExtResource("7_3gx7t")]
position = Vector2(0, 256)

[node name="Rock" parent="Objects" instance=ExtResource("7_2oj1e")]
position = Vector2(256, 0)

[node name="Rock2" parent="Objects" instance=ExtResource("7_2oj1e")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="SteamUI" type="Control" parent="UI"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -50.0
offset_right = 60.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="UI/SteamUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Options" type="VBoxContainer" parent="UI/SteamUI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="HostP2PGameButton" type="Button" parent="UI/SteamUI/Panel/Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_8cblx")
theme_override_font_sizes/font_size = 8
text = "Host P2P Game"

[node name="ListLobbiesButton" type="Button" parent="UI/SteamUI/Panel/Options"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_8cblx")
theme_override_font_sizes/font_size = 8
text = "List Lobbies"

[node name="Lobbies" type="ScrollContainer" parent="UI/SteamUI/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 37.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="LobbyList" type="VBoxContainer" parent="UI/SteamUI/Panel/Lobbies"]
unique_name_in_owner = true
layout_mode = 2

[node name="MultiplayerUI" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Panel" type="Panel" parent="UI/MultiplayerUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MultiplayerUI/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HostGame" type="Button" parent="UI/MultiplayerUI/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_nlliu")
theme_override_font_sizes/font_size = 8
text = "Host New Game"

[node name="JoinAsClient" type="Button" parent="UI/MultiplayerUI/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_8cblx")
theme_override_font_sizes/font_size = 8
text = "Join as Client"

[node name="UseSteam" type="Button" parent="UI/MultiplayerUI/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("7_8cblx")
theme_override_font_sizes/font_size = 8
text = "Use Steam"

[node name="InventoryUI" parent="UI" instance=ExtResource("6_u5sy4")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="MenuBarUI" parent="UI" instance=ExtResource("8_2oj1e")]

[connection signal="pressed" from="UI/SteamUI/Panel/Options/HostP2PGameButton" to="GameManager" method="become_host"]
[connection signal="pressed" from="UI/SteamUI/Panel/Options/ListLobbiesButton" to="GameManager" method="list_steam_lobbies"]
[connection signal="pressed" from="UI/MultiplayerUI/Panel/VBoxContainer/HostGame" to="GameManager" method="become_host"]
[connection signal="pressed" from="UI/MultiplayerUI/Panel/VBoxContainer/JoinAsClient" to="GameManager" method="join_as_client"]
[connection signal="pressed" from="UI/MultiplayerUI/Panel/VBoxContainer/UseSteam" to="GameManager" method="use_steam"]
